# OneFluxPy

./: pyproject.toml
onefluxpy/downscaling/: __init__.py
onefluxpy/flux_filtering/: co2-flux-filtering.py  filtering-modules.py
onefluxpy/qc_auto/: dataset.py  main.py  marginals.py  rpot.py  spike.py
onefluxpy/ustar_cp/: change-point-detection.py  moving-window-ustar.py  ustar-bootstrap-detection.py  ustar-threshold-evaluation.py
